# echidna

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install  pmid-wuhsin-jun-set.txt  pmid-zikhermanj-set.txt  pyproject.toml
affiliation_normalizer/: README.md  __init__.py  build_rules.py  matcher.py  models.py
affiliation_normalizer/data/: rules.json
app/: admin_password_hash.py  auth.py  logic.py  main.py  models.py  ncbi.py  orcid.py  perf.py  usage.py
nginx/: echidna.conf
templates/: _build_footer.html  citation_select.html  disambiguate.html  disambiguate_progress.html  index.html  report.html  review_uncertain.html
test_sets/: combined.txt
tests/: test_logic.py  test_main.py  test_ncbi.py  test_ncbi_affiliations.py  test_orcid.py  test_proxy_integration.py  test_pubmed_affiliation_fallback.py
