[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echidna"
version = "0.1.0"
description = "Precision-first publication counting webapp with PubMed/PMC support"
requires-python = ">=3.11"
dependencies = [
  "affiliation_normalizer @ git+https://github.com/jeff47/affiliation_normalizer.git@main",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "lxml>=5,<6",
  "openpyxl>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "mypy>=1.19,<2",
  "types-openpyxl>=3.1,<4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.mypy]
python_version = "3.12"
